# password-generator

./: .gitignore  Cargo.toml  README.md  index.html
pkg/: README.md  memory.d.ts  memory.js  memory_bg.wasm.d.ts  package.json
src/: func.rs  main.rs  pass.rs
ui/: appwindow.slint  oreo  oreo.c  ui.slint
