[package]
name = "memory"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
rand = "0.8.5"
slint = "1.8.0"
web-sys = "0.3.77"

[build-dependencies]
slint-build = "1.8.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
getrandom = { version = "0.2.2", features = ["js"] }

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'

